--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,36 @@
-.App {
+body{
+  background: blueviolet;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 10px;
+  padding: 5%;
+}
+
+.btn{
+  background: pink;
+  margin: 20px;
   text-align: center;
-  padding: 20%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.add-btn{
+  background: lightblue;
+  width: 40px;
+  height: 40px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app-title{
+  text-align: center;
+  color: lightblue;
+  font-size: 70px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 20px;
+  color: pink;
+  border: 5px solid pink;
+  border-radius: 25px;
+  padding: 30;
+  text-align: center;
+  max-width: 80%;
+  height: auto;
+  margin: auto;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
